# mockapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: CollectionFormModal.jsx  Dashboard.jsx  DeleteConfirmModal.jsx  EndpointDetail.jsx  EndpointFormModal.jsx  EndpointList.jsx  Login.jsx  Modal.jsx  ResponseFormModal.jsx  ResponseViewer.jsx  Sidebar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/styles/: App.css
hf_mockapi/: manage.py
hf_mockapi/domains/: admin.py  api_views.py  apps.py  models.py  openapi_utils.py  serializers.py  test_openapi.py  urls.py  utils.py  views.py
hf_mockapi/domains/migrations/: 0001_initial.py  0002_endpointresponse.py  0003_collection_openapi_schema.py
hf_mockapi/hf_mockapi/: asgi.py  settings.py  urls.py  wsgi.py
hf_mockapi/logger/: admin.py  apps.py  models.py
hf_mockapi/logger/migrations/: 0001_initial.py
